--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,21 +1,19 @@
-name: Deploy to Vapor Production
+name: Deploy to Vapor and Frontend
 
 on:
   push:
     branches:
-      - master
-      - feat/vapor
+      - main
+      - develop
 
 jobs:
-  vapor:
-    name: Deploy to Vapor Production
+  backend:
+    name: Deploy Backend
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - uses: actions/checkout@v2
 
-      # Step 2: Setup PHP
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -23,36 +21,110 @@ jobs:
           tools: composer:v2
           coverage: none
 
-      # Step 3: Prepare Laravel Environment
       - name: Prepare Laravel Environment
         working-directory: ./backend
         run: |
           mkdir -p bootstrap/cache
           chmod -R 775 bootstrap/cache
 
-      # Step 4: Prepare HTMLPurifier Cache Directory
       - name: Prepare HTMLPurifier Cache Directory
         working-directory: ./backend
         run: |
           mkdir -p storage/app/htmlpurifier
           chmod -R 775 storage/app/htmlpurifier
 
-      # Step 5: Install Dependencies
       - name: Install Dependencies
         working-directory: ./backend
         run: composer install --no-dev --no-progress --no-scripts --optimize-autoloader
 
-      # Step 6: Install Vapor CLI
       - name: Install Vapor CLI
         run: composer global require laravel/vapor-cli
 
-      # Step 7: Log the branch being deployed (Optional enhancement)
-      - name: Log Branch
-        run: echo "Deploying branch ${{ github.ref_name }}"
+      - name: Set Deployment Environment
+        run: |
+          if [[ "${{ github.ref_name }}" == "develop" ]]; then
+            echo "VAPOR_ENV=staging" >> "$GITHUB_ENV"
+          else
+            echo "VAPOR_ENV=production" >> "$GITHUB_ENV"
+          fi
 
-      # Step 8: Deploy to the Vapor Production Environment
-      - name: Deploy to Production
+      - name: Log Branch and Environment
+        run: |
+          echo "🚀 Deploying branch ${{ github.ref_name }} to Vapor environment: $VAPOR_ENV"
+
+      - name: Deploy to Vapor
         working-directory: ./backend
-        run: vapor deploy production
+        run: vapor deploy $VAPOR_ENV
         env:
           VAPOR_API_TOKEN: ${{ secrets.VAPOR_API_TOKEN }}
+
+  frontend:
+    name: Deploy Frontend
+    runs-on: ubuntu-latest
+    needs: backend
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set Deployment Environment
+        run: |
+          if [[ "${{ github.ref_name }}" == "develop" ]]; then
+            echo "DO_APP_ID=${{ secrets.DIGITALOCEAN_STAGING_APP_ID }}" >> "$GITHUB_ENV"
+          else
+            echo "DO_APP_ID=${{ secrets.DIGITALOCEAN_PRODUCTION_APP_ID }}" >> "$GITHUB_ENV"
+          fi
+
+      - name: Trigger Deployment on DigitalOcean
+        id: trigger_deployment
+        run: |
+          RESPONSE=$(curl -s -o response.json -w "%{http_code}" -X POST "https://api.digitalocean.com/v2/apps/$DO_APP_ID/deployments" \
+            -H "Authorization: Bearer ${{ secrets.DIGITALOCEAN_API_TOKEN }}" \
+            -H "Content-Type: application/json")
+
+          if [ "$RESPONSE" -ne 200 ]; then
+            ERROR_MSG=$(jq -r '.message // "Unknown error occurred."' response.json)
+            echo "❌ Failed to trigger deployment. HTTP Status: $RESPONSE. Error: $ERROR_MSG"
+            exit 1
+          fi
+
+          DEPLOYMENT_ID=$(jq -r '.deployment.id' response.json)
+          if [ "$DEPLOYMENT_ID" == "null" ]; then
+            echo "❌ Failed to extract deployment ID."
+            exit 1
+          fi
+
+          echo "::add-mask::$DEPLOYMENT_ID"
+          echo "✅ Deployment triggered successfully."
+
+          echo "deployment_id=$DEPLOYMENT_ID" >> "$GITHUB_ENV"
+
+      - name: Poll Deployment Status
+        run: |
+          MAX_RETRIES=30
+          SLEEP_TIME=10
+          COUNTER=0
+
+          while [ $COUNTER -lt $MAX_RETRIES ]; do
+            RESPONSE=$(curl -s -X GET "https://api.digitalocean.com/v2/apps/$DO_APP_ID/deployments/${{ env.deployment_id }}" \
+              -H "Authorization: Bearer ${{ secrets.DIGITALOCEAN_API_TOKEN }}" \
+              -H "Content-Type: application/json")
+
+            STATUS=$(echo "$RESPONSE" | jq -r '.deployment.phase')
+
+            echo "🔄 Deployment Status: $STATUS"
+
+            if [ "$STATUS" == "ACTIVE" ]; then
+              echo "✅ Deployment completed successfully."
+              exit 0
+            elif [[ "$STATUS" == "FAILED" || "$STATUS" == "CANCELLED" ]]; then
+              echo "❌ Deployment failed or was cancelled."
+              exit 1
+            fi
+
+            COUNTER=$((COUNTER + 1))
+            echo "⏳ Retrying in $SLEEP_TIME seconds... ($COUNTER/$MAX_RETRIES)"
+            sleep $SLEEP_TIME
+          done
+
+          echo "⏰ Deployment timed out."
+          exit 1
