Add missing environment variables

--- a/docker/all-in-one/docker-compose.yml
+++ b/docker/all-in-one/docker-compose.yml
@@ -13,14 +13,31 @@ services:
       - VITE_STRIPE_PUBLISHABLE_KEY=${VITE_STRIPE_PUBLISHABLE_KEY}
       - LOG_CHANNEL=${LOG_CHANNEL}
       - QUEUE_CONNECTION=${QUEUE_CONNECTION}
-      - MAIL_MAILER=${MAIL_MAILER}
       - APP_KEY=${APP_KEY}
+      - APP_CDN_URL=${APP_CDN_URL}
       - APP_FRONTEND_URL=${APP_FRONTEND_URL}
       - JWT_SECRET=${JWT_SECRET}
+      - APP_DISABLE_REGISTRATION=${APP_DISABLE_REGISTRATION}
+      - APP_SAAS_MODE_ENABLED=${APP_SAAS_MODE_ENABLED}
+      - APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=${APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT}
+      - APP_SAAS_STRIPE_APPLICATION_FEE_FIXED=${APP_SAAS_STRIPE_APPLICATION_FEE_FIXED}
+      - APP_EMAIL_LOGO_URL=${APP_EMAIL_LOGO_URL}
+      - APP_EMAIL_LOGO_LINK_URL=${APP_EMAIL_LOGO_LINK_URL}
+      - MAIL_MAILER=${MAIL_MAILER}
+      - MAIL_DRIVER=${MAIL_DRIVER}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_ENCRYPTION=${MAIL_ENCRYPTION}
+      - MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
+      - MAIL_FROM_NAME=${MAIL_FROM_NAME}
       - FILESYSTEM_PUBLIC_DISK=${FILESYSTEM_PUBLIC_DISK}
       - FILESYSTEM_PRIVATE_DISK=${FILESYSTEM_PRIVATE_DISK}
-      - APP_CDN_URL=${APP_CDN_URL}
       - DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
+      - STRIPE_PUBLIC_KEY=${STRIPE_PUBLIC_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
 
     depends_on:
       postgres:
