Update email sending modal

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,7 @@ APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=1.5
 APP_HOMEPAGE_VIEWS_UPDATE_BATCH_SIZE=8
 APP_DISABLE_REGISTRATION=false
 APP_STRIPE_CONNECT_ACCOUNT_TYPE=express
+APP_PLATFORM_SUPPORT_EMAIL=support@your-website.com
 
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
