--- a/Dockerfile.all-in-one
+++ b/Dockerfile.all-in-one
@@ -22,6 +22,7 @@ COPY --from=node-frontend /app/frontend /app/frontend
 
 COPY ./backend /app/backend
 RUN mkdir -p /app/backend/bootstrap/cache \
+    && mkdir -p /app/backend/storage \
     && chown -R www-data:www-data /app/backend \
     && find /app/backend -type d -exec chmod 755 {} \; \
     && find /app/backend -type f -exec chmod 644 {} \; \
