--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,4 +1,4 @@
-# See the README.md file for informaiton on how to generate the JWT_SECRET and APP_KEY
+# See the README.md file for information on how to generate the JWT_SECRET and APP_KEY
 APP_KEY=
 JWT_SECRET=
 
@@ -6,7 +6,7 @@ JWT_SECRET=
 VITE_FRONTEND_URL=http://localhost:8123
 VITE_API_URL_CLIENT=http://localhost:8123/api
 VITE_API_URL_SERVER=http://localhost:80/api
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
 
 # Backend variables
 # These values may not be suitable for production environments.
@@ -14,12 +14,34 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test
 # https://hi.events/docs/getting-started/deploying
 LOG_CHANNEL=stderr
 QUEUE_CONNECTION=sync
-MAIL_MAILER=log
 
+# Application settings
+APP_CDN_URL=http://localhost:8123/storage
+APP_FRONTEND_URL=http://localhost:8123
+APP_DISABLE_REGISTRATION=false
+APP_SAAS_MODE_ENABLED=false
+APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=0
+APP_SAAS_STRIPE_APPLICATION_FEE_FIXED=0
+
+# Email settings (Using log mailer for local testing)
+MAIL_MAILER=log
+MAIL_DRIVER=log
+MAIL_HOST=mail.local
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=test@example.com
+MAIL_FROM_NAME="Hi Events"
+
+# File storage settings
 FILESYSTEM_PUBLIC_DISK=public
 FILESYSTEM_PRIVATE_DISK=local
 
-APP_CDN_URL=http://localhost:8123/storage
-APP_FRONTEND_URL=http://localhost:8123
-
+# Database settings
 DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
+
+# Stripe settings (Replace with valid test keys if necessary)
+STRIPE_PUBLIC_KEY=pk_test_123456789
+STRIPE_SECRET_KEY=sk_test_123456789
+STRIPE_WEBHOOK_SECRET=whsec_test_123456789
