--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "nette/php-generator": "^4.0",
         "php-open-source-saver/jwt-auth": "^2.1",
+        "sentry/sentry-laravel": "^4.13",
         "spatie/icalendar-generator": "^2.8",
         "spatie/laravel-data": "^4.11",
         "spatie/laravel-webhook-server": "^3.8",
