--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.8",
     "express": "^4.19.2",
+    "liquidjs": "^10.21.0",
     "qr-scanner": "^1.4.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
