--- a/backend/vapor.yml
+++ b/backend/vapor.yml
@@ -6,6 +6,7 @@ environments:
     domain: api.hi.events
     memory: 2048
     cli-memory: 512
+    storage: hievents-assets-prod
     runtime: 'php-8.3:al2'
     warm: 3
     cache: hievents-redis
@@ -31,7 +32,7 @@ environments:
     cache: hievents-redis
     database: hievents-postgres
     queue:
-      - hievents-queue-prod
+      - hievents-queue-staging
       - hievents-webhook-queue-staging
     queue-memory: 1024
     queue-concurrency: 2
