--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,21 +1,19 @@
-FROM webdevops/php-nginx:8.2-alpine
+FROM serversideup/php:8.3-fpm-nginx-alpine
 
-WORKDIR /app
+ENV PHP_OPCACHE_ENABLE=1
+ENV NGINX_WEBROOT=/var/www/html/public
 
-COPY . /app
+WORKDIR /var/www/html
 
-ENV WEB_DOCUMENT_ROOT /app/public
+RUN mkdir -p /var/www/html/storage /var/www/html/bootstrap/cache \
+    && chown -R www-data:www-data /var/www/html
 
-ENV PHP_DISMOD=ioncube,pdo_sqlsrv,sqlsrv,pdo_mysql,mysqli,mysqlnd,pdo_sqlite,mysqlnd,mongodb,memcached
+COPY --chown=www-data:www-data . /var/www/html
 
-COPY ./docker/supervisord/syslog.conf /opt/docker/etc/supervisor.d/syslog.conf
+# Switch to root user to install PHP extensions
+USER root
+RUN install-php-extensions intl
+USER www-data
 
-RUN chown -R application:application /app \
-    && mkdir -p /app/storage \
-    && chmod -R 755 /app/storage  \
-    && mkdir -p /app/bootstrap/cache \
-    && chmod -R 775 /app/bootstrap/cache
-
-EXPOSE 80 443
-
-CMD ["supervisord"]
+RUN chmod -R 755 /var/www/html/storage \
+    && chmod -R 775 /var/www/html/bootstrap/cache
