--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,9 +41,11 @@
     "@stripe/stripe-js": "^1.54.1",
     "@tabler/icons-react": "^2.44.0",
     "@tanstack/react-query": "5.52.2",
+    "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-text-align": "^2.1.13",
+    "@tiptap/extension-text-style": "^2.11.7",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
