--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.8",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "qr-scanner": "^1.4.2",
     "query-string": "^8.1.0",
