docker : update remote deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@lingui/macro": "^4.7.0",
     "@lingui/react": "^4.7.0",
+    "@lottiefiles/dotlottie-react": "^0.13.4",
     "@mantine/carousel": "7.17.0",
     "@mantine/charts": "7.17.0",
     "@mantine/core": "7.17.0",
