--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,17 +23,17 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@lingui/macro": "^4.7.0",
     "@lingui/react": "^4.7.0",
-    "@mantine/carousel": "7.17.0",
-    "@mantine/charts": "7.17.0",
-    "@mantine/core": "7.17.0",
-    "@mantine/dates": "7.17.0",
-    "@mantine/dropzone": "7.17.0",
-    "@mantine/form": "7.17.0",
-    "@mantine/hooks": "7.17.0",
-    "@mantine/modals": "7.17.0",
-    "@mantine/notifications": "7.17.0",
-    "@mantine/nprogress": "7.17.0",
-    "@mantine/tiptap": "7.17.0",
+    "@mantine/carousel": "^8.0.1",
+    "@mantine/charts": "^8.0.1",
+    "@mantine/core": "^8.0.1",
+    "@mantine/dates": "^8.0.1",
+    "@mantine/dropzone": "^8.0.1",
+    "@mantine/form": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
+    "@mantine/modals": "^8.0.1",
+    "@mantine/notifications": "^8.0.1",
+    "@mantine/nprogress": "^8.0.1",
+    "@mantine/tiptap": "^8.0.1",
     "@react-pdf/renderer": "^3.3.4",
     "@react-router/node": "^7.1.5",
     "@remix-run/node": "^2.8.1",
