--- a/backend/package.json
+++ b/backend/package.json
@@ -10,4 +10,16 @@
         "vite": "^4.0.0"
     },
     "dependencies": {}
+
+  "name": "axiqo-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "cors": "^2.8.5"
+  }
 }
