Update Vercel configuration and add root package.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/dist/client",
-  "installCommand": "cd frontend && npm install",
-  "framework": "vite"
+  "framework": "vite",
+  "outputDirectory": "dist/client"
 } 
