Add redis container

--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -13,7 +13,7 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
 # Please refer to the documentation for more information on how to configure these values
 # https://hi.events/docs/getting-started/deploying
 LOG_CHANNEL=stderr
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 
 # Application settings
 APP_CDN_URL=http://localhost:8123/storage
@@ -45,3 +45,8 @@ DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
 STRIPE_PUBLIC_KEY=pk_test_123456789
 STRIPE_SECRET_KEY=sk_test_123456789
 STRIPE_WEBHOOK_SECRET=whsec_test_123456789
+
+# Redis settings
+REDIS_HOST=redis
+REDIS_PASSWORD=
+REDIS_PORT=6379
