--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Hi.Events
+VITE_APP_NAME=Hi.Events
 APP_ENV=local
 APP_KEY=base64:DwMidgIu8YVSEg0BLMrh5JS2dk1POpCn3rvDaZk3fEQ=
 APP_DEBUG=true
