--- a/docker/development/.env
+++ b/docker/development/.env
@@ -1,4 +1,4 @@
-APP_NAME='Hi.Events'
+VITE_APP_NAME='Hi.Events'
 APP_ENV=local
 APP_KEY=base64:z7qfYEwsFdTn6zMCYwgSwDoWZlk6SuKU54+woXYNHlk=
 APP_DEBUG=true
