--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@lingui/react": "^4.7.0",
     "@mantine/carousel": "^8.0.1",
     "@mantine/charts": "^8.0.1",
+    "@mantine/colors-generator": "^8.1.0",
     "@mantine/core": "^8.0.1",
     "@mantine/dates": "^8.0.1",
     "@mantine/dropzone": "^8.0.1",
@@ -51,6 +52,7 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.4.0",
+    "chroma-js": "^3.1.2",
     "classnames": "^2.3.2",
     "collect.js": "^4.36.1",
     "compression": "^1.7.4",
