fix: reinstate APP_NAME but keep VITE_APP_NAME for frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 VITE_APP_NAME=Hi.Events
+APP_NAME=Hi.Events
 APP_ENV=local
 APP_KEY=base64:DwMidgIu8YVSEg0BLMrh5JS2dk1POpCn3rvDaZk3fEQ=
 APP_DEBUG=true
