fix: reinstate APP_PLATFORM_SUPPORT_EMAIL but keep VITE_ var for frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-VITE_APP_NAME=Hi.Events
-APP_NAME=Hi.Events
+VITE_APP_NAME=Hi.Events # Used for the Frontend UI
+APP_NAME=Hi.Events # Used for the Backend Logic
 APP_ENV=local
 APP_KEY=base64:DwMidgIu8YVSEg0BLMrh5JS2dk1POpCn3rvDaZk3fEQ=
 APP_DEBUG=true
@@ -13,7 +13,8 @@ APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=1.5
 APP_HOMEPAGE_VIEWS_UPDATE_BATCH_SIZE=8
 APP_DISABLE_REGISTRATION=false
 APP_STRIPE_CONNECT_ACCOUNT_TYPE=express
-VITE_APP_PLATFORM_SUPPORT_EMAIL=support@your-website.com
+VITE_APP_PLATFORM_SUPPORT_EMAIL=support@your-website.com # Used for the Frontend UI
+APP_PLATFORM_SUPPORT_EMAIL=support@your-website.com # Used for the Backend Logic
 
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
