--- a/docker/development/.env
+++ b/docker/development/.env
@@ -1,5 +1,4 @@
-VITE_APP_NAME='Hi.Events'
-APP_NAME='Hi.Events'
+APP_NAME=Hi.Events
 APP_ENV=local
 APP_KEY=base64:z7qfYEwsFdTn6zMCYwgSwDoWZlk6SuKU54+woXYNHlk=
 APP_DEBUG=true
