--- a/docker/development/docker-compose.dev.yml
+++ b/docker/development/docker-compose.dev.yml
@@ -56,6 +56,7 @@ services:
             VITE_API_URL_SERVER: '${API_URL_SERVER}'
             VITE_STRIPE_PUBLISHABLE_KEY: '${STRIPE_PUBLIC_KEY}'
             VITE_FRONTEND_URL: '${FRONTEND_URL}'
+            VITE_APP_NAME: '${APP_NAME}'
         networks:
             - app
 
