--- a/docker/all-in-one/supervisor/supervisord.conf
+++ b/docker/all-in-one/supervisor/supervisord.conf
@@ -34,7 +34,7 @@ stderr_logfile=/dev/stderr
 redirect_stderr=true
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
-environment=NODE_ENV="production",VITE_API_URL_CLIENT="%(ENV_VITE_API_URL_CLIENT)s",VITE_API_URL_SERVER="http://localhost:80/api",VITE_FRONTEND_URL="%(ENV_VITE_FRONTEND_URL)s",VITE_STRIPE_PUBLISHABLE_KEY="%(ENV_VITE_STRIPE_PUBLISHABLE_KEY)s"
+environment=NODE_ENV="production",VITE_API_URL_CLIENT="%(ENV_VITE_API_URL_CLIENT)s",VITE_API_URL_SERVER="http://localhost:80/api",VITE_FRONTEND_URL="%(ENV_VITE_FRONTEND_URL)s",VITE_STRIPE_PUBLISHABLE_KEY="%(ENV_VITE_STRIPE_PUBLISHABLE_KEY)s",VITE_APP_NAME="%(ENV_VITE_APP_NAME)s"
 
 [program:laravel-queue-worker]
 command=php /app/backend/artisan queue:work --queue=default,webhook-queue --sleep=3 --tries=3 --timeout=60
