Fixes supervisord in AIO Docker setup

--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,13 +1,13 @@
 # See the README.md file for information on how to generate the JWT_SECRET and APP_KEY
-APP_KEY=base64:yJmwXYo1qHgobzjBPz011dfUz+AkKSHDMLaZSWa/xVw=
-JWT_SECRET=base64:yJmwXYo1qHgobzjBPz011dfUz+AkKSHDMLaZSWa/xVw=
+APP_KEY=
+JWT_SECRET=
 
 # Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
 VITE_API_URL_CLIENT=http://localhost:8123/api
 VITE_API_URL_SERVER=http://localhost:80/api
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
-VITE_APP_NAME=Cool.App
+VITE_APP_NAME=Hi.Events
 
 # Backend variables
 # These values may not be suitable for production environments.
