--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@
 version: "1"
 services:
   - type: web
-    name: hi.events-all-in-one
+    name: sandbox-hi.events-all-in-one
     runtime: docker
     repo: https://github.com/TicketGuardian/Hi.Events
     branch: feat/render.com
@@ -77,12 +77,23 @@ services:
     dockerfilePath: ./Dockerfile.all-in-one
     autoDeployTrigger: commit
 databases:
-  - name: hi-events-db
+  - name: sandbox-hi-events-db
     databaseName: hi_events_db_7bs9
     user: hi_events_db_7bs9_user
     plan: free
     region: oregon
     ipAllowList:
       - source: 64.226.131.98/32
-        description: everywhere
+        description: P81 Production network IP
+      - source: 149.28.93.26/32
+        description: P81 Technology network IP
+    postgresMajorVersion: "17"
+  - name: uat-hi-events-db
+    databaseName: hi_events_db_uat
+    user: hi_events_db_uat_user
+    plan: free
+    region: oregon
+    ipAllowList:
+      - source: 64.226.131.98/32
+        description: P81 Production network IP
     postgresMajorVersion: "17"
