--- a/render.yaml
+++ b/render.yaml
@@ -84,19 +84,41 @@ services:
 
   - type: redis
     name: sandbox-hi-events-redis
-    plan: free
+    plan: starter
     region: oregon
     ipAllowList:
       - source: 64.226.131.98/32
         description: P81 Production network IP
 
-databases:
-  - name: sandbox-hi-events-db
-    databaseName: hi_events_db_7bs9
-    user: hi_events_db_7bs9_user
-    plan: free
+  - type: redis
+    name: uat-hi-events-redis
+    plan: starter
     region: oregon
     ipAllowList:
       - source: 64.226.131.98/32
         description: P81 Production network IP
+      - source: 149.28.93.26/32
+        description: P81 Technology network IP
+
+databases:
+  - name: sandbox-hi-events-db
+    databaseName: hi_events_db_7bs9
+    user: hi_events_db_7bs9_user
+    plan: basic-1gb
+    region: oregon
+    ipAllowList:
+      - source: 64.226.131.98/32
+        description: P81 Production network IP
+    postgresMajorVersion: "17"
+
+  - name: uat-hi-events-db
+    databaseName: hi_events_db_uat
+    user: hi_events_db_uat_user
+    plan: basic-1gb
+    region: oregon
+    ipAllowList:
+      - source: 64.226.131.98/32
+        description: P81 Production network IP
+      - source: 149.28.93.26/32
+        description: P81 Technology network IP
     postgresMajorVersion: "17"
