Update render.yaml to change service plan from 'free' to 'starter'

--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     runtime: docker
     repo: https://github.com/TicketGuardian/Hi.Events
     branch: feat/render.com
-    plan: free
+    plan: starter
     envVars:
       - key: STRIPE_WEBHOOK_SECRET
         sync: false
