Update environment variables in render.yaml for demo and UAT configurations, setting application name and API URLs.

--- a/render.yaml
+++ b/render.yaml
@@ -66,15 +66,15 @@ services:
       - key: LOG_CHANNEL
         sync: false
       - key: VITE_APP_NAME
-        sync: false
+        value: Hi.Events Demo
       - key: VITE_STRIPE_PUBLISHABLE_KEY
         sync: false
       - key: VITE_API_URL_SERVER
-        sync: false
+        value: https://demo.helloteak.com/api
       - key: VITE_API_URL_CLIENT
-        sync: false
+        value: https://demo.helloteak.com/api
       - key: VITE_FRONTEND_URL
-        sync: false
+        value: https://demo.helloteak.com
       - key: JWT_SECRET
         sync: false
       - key: APP_KEY
@@ -149,15 +149,15 @@ services:
       - key: LOG_CHANNEL
         sync: false
       - key: VITE_APP_NAME
-        sync: false
+        value: UAT Hi.Events Demo
       - key: VITE_STRIPE_PUBLISHABLE_KEY
         sync: false
       - key: VITE_API_URL_SERVER
-        sync: false
+        value: https://demo.uat.helloteak.com/api
       - key: VITE_API_URL_CLIENT
-        sync: false
+        value: https://demo.uat.helloteak.com/api
       - key: VITE_FRONTEND_URL
-        sync: false
+        value: https://demo.uat.helloteak.com
       - key: JWT_SECRET
         sync: false
       - key: APP_KEY
