Update render.yaml to change database plan from 'basic-1gb' to 'pro-4gb'

--- a/render.yaml
+++ b/render.yaml
@@ -189,7 +189,7 @@ databases:
   - name: sandbox-hi-events-db
     databaseName: hi_events_db_7bs9
     user: hi_events_db_7bs9_user
-    plan: basic-1gb
+    plan: pro-4gb
     region: oregon
     ipAllowList:
       - source: 64.226.131.98/32
