--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,10 +45,12 @@
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-image": "^2.11.5",
     "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-task-item": "^3.3.0",
+    "@tiptap/extension-task-list": "^3.3.0",
     "@tiptap/extension-text-align": "^2.1.13",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-underline": "^2.1.13",
-    "@tiptap/pm": "^2.12.0",
+    "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "axios": "^1.4.0",
