--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,6 +1,6 @@
 # See the README.md file for information on how to generate the JWT_SECRET and APP_KEY
-APP_KEY=
-JWT_SECRET=
+APP_KEY=base64:bSfPFch7OW6i96ZsS48GN2FoJqAGS1X1YJx/QgAG8EU=
+JWT_SECRET=bYosx/AR58bIK7QGYLPozRtMxT5/ohGPZa+vlkoAe/s=
 
 # Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
