--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,6 +1,6 @@
 # See the README.md file for information on how to generate the JWT_SECRET and APP_KEY
-APP_KEY=
-JWT_SECRET=
+APP_KEY=base64:dx9+S5nIAyKz3IV39JbdlNhl3lNMyQI4jDHuSNo1M5E=
+JWT_SECRET=Fqr95S7sOQ3szWlOgAwe+RVN4BZ9XhFLc720JGqelkM=
 
 # Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
@@ -23,6 +23,8 @@ APP_DISABLE_REGISTRATION=false
 APP_SAAS_MODE_ENABLED=false
 APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=0
 APP_SAAS_STRIPE_APPLICATION_FEE_FIXED=0
+APP_EMAIL_LOGO_URL=
+APP_EMAIL_LOGO_LINK_URL=
 
 # Email settings (Using log mailer for local testing)
 MAIL_MAILER=log
