--- a/docker/all-in-one/nginx/nginx.conf
+++ b/docker/all-in-one/nginx/nginx.conf
@@ -2,8 +2,8 @@ events {}
 
 http {
    server {
-       listen 80;
-       listen [::]:80;
+       listen ${PORT};
+       listen [::]:${PORT};
        server_name _;
 
        root /app/backend/public;
