Update var name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,8 +78,8 @@ jobs:
         if: env.TEST_MODE != 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           aws-region: eu-west-1
 
       - name: Download Encrypted Environment File from S3
